fix: edit input-field to avoid actions-right overlap

--- a/components/footer/footer.styl
+++ b/components/footer/footer.styl
@@ -84,31 +84,30 @@
 		&:hover
 			fill var(--accent-text)
 
+	&__input-container
+		position relative
+		display flex
+		width 100%
+		height 100%
+
 	&__input
 		display block
 		flex-grow 1
 		flex-basis 100%
+		box-sizing border-box
 		width 100%
 		height 100%
-		margin 0 8px 0 0
+		margin 0 12px 0 0
 		color var(--primary-text)
 		background transparent
 		border none
 		outline none
 
-		&:last-child
-			margin-right 0
-
 	&__actions-right
+		position relative
 		display flex
 		align-items center
 		flex-shrink 0
-
-		+above(size-m)
-			position absolute
-			top 50%
-			right 24px
-			transform translateY(-50%)
 
 	// TODO: Remove !important
 	&__donate-button
